--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,11 @@ android {
 }
 
 dependencies {
+    // Room
     implementation 'androidx.room:room-common:2.3.0'
     implementation 'androidx.room:room-ktx:2.3.0'
+    implementation "androidx.room:room-runtime:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
     implementation 'androidx.navigation:navigation-runtime-ktx:2.3.5'
 
 
